[package]
name = 'singleton-process'
version = '0.1.0'
edition = '2024'
description = 'Ensure only a single process actively running with an associated name.'
readme = 'README.md'
repository = 'https://github.com/CrendKing/rust-singleton-process'
license-file = 'LICENSE'
keywords = ['singleton']
categories = ['development-tools']

[dependencies]
thiserror = { version = '2.0', default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = '0.61', default-features = false, features = [
    'Win32_Foundation',
    'Win32_Security',
    'Win32_System_Memory',
    'Win32_System_Threading',
] }

[target.'cfg(any(target_os = "linux", target_os="android"))'.dependencies]
libc = { version = '0.2', default-features = false }
nix = { version = '0.30', default-features = false, features = ['fs', 'signal'] }

[dev-dependencies]
function_name = { version = '0.3', default-features = false }
if_chain = { version = '1.0', default-features = false }
sysinfo = { version = '0.35', default-features = false, features = ['system'] }
